{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 252,
  "lineage": "68db13e5-fa2a-2f52-6a05-e94b395b43e9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginxs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02538f8925e3aa27a",
            "arn": "arn:aws:ec2:us-east-1:968918779796:instance/i-0248d7860901505ad",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "globoweb-dev-70378-nginx_ec2_profile",
            "id": "i-0248d7860901505ad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02e574a6d3256e1e8",
            "private_dns": "ip-10-0-0-182.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.182",
            "public_ip": "54.204.90.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fcb7a09e4f96055e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bcf1c9e78b43f479",
            "tags": {
              "Name": "globoweb-dev-nginx-0",
              "billing_code": "BC1",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "Name": "globoweb-dev-nginx-0",
              "billing_code": "BC1",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a58afae755f36bde"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.s3_bucket.aws_iam_instance_profile.nginx_ec2_profile",
            "module.s3_bucket.aws_iam_role.nginx_s3_role",
            "module.s3_bucket.aws_iam_role_policy.allow_s3_all",
            "module.s3_bucket.aws_s3_bucket.web_bucket",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02538f8925e3aa27a",
            "arn": "arn:aws:ec2:us-east-1:968918779796:instance/i-0a7e62da4c600c2cb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "globoweb-dev-70378-nginx_ec2_profile",
            "id": "i-0a7e62da4c600c2cb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-016d3825c1f174576",
            "private_dns": "ip-10-0-1-254.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.254",
            "public_ip": "100.25.255.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d9f8ee0b729562b6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a06fc44339167034",
            "tags": {
              "Name": "globoweb-dev-nginx-1",
              "billing_code": "BC1",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "Name": "globoweb-dev-nginx-1",
              "billing_code": "BC1",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a58afae755f36bde"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.s3_bucket.aws_iam_instance_profile.nginx_ec2_profile",
            "module.s3_bucket.aws_iam_role.nginx_s3_role",
            "module.s3_bucket.aws_iam_role_policy.allow_s3_all",
            "module.s3_bucket.aws_s3_bucket.web_bucket",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "globoweb-dev-70378",
                "enabled": true,
                "prefix": "alb-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:968918779796:loadbalancer/app/globo-web-alb/d0763f101c32414d",
            "arn_suffix": "app/globo-web-alb/d0763f101c32414d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "globo-web-alb-612336070.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:968918779796:loadbalancer/app/globo-web-alb/d0763f101c32414d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "globo-web-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f78ca190bd426c34"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a06fc44339167034"
              },
              {
                "subnet_id": "subnet-0bcf1c9e78b43f479"
              }
            ],
            "subnets": [
              "subnet-0a06fc44339167034",
              "subnet-0bcf1c9e78b43f479"
            ],
            "tags": {
              "billing_code": "BC1",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "billing_code": "BC1",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "vpc_id": "vpc-097c8472881ef7f80",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "module.s3_bucket.aws_s3_bucket.web_bucket",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx_lbl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:968918779796:listener/app/globo-web-alb/d0763f101c32414d/8c7c8ec25308298b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:968918779796:targetgroup/nginx-tg/5f838e0a225bdd1b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:968918779796:listener/app/globo-web-alb/d0763f101c32414d/8c7c8ec25308298b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:968918779796:loadbalancer/app/globo-web-alb/d0763f101c32414d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "billing_code": "BC1",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "billing_code": "BC1",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx_lb",
            "aws_lb_target_group.nginx-tg",
            "aws_security_group.alb-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "module.s3_bucket.aws_s3_bucket.web_bucket",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:968918779796:targetgroup/nginx-tg/5f838e0a225bdd1b",
            "arn_suffix": "targetgroup/nginx-tg/5f838e0a225bdd1b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:968918779796:targetgroup/nginx-tg/5f838e0a225bdd1b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "billing_code": "BC1",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "billing_code": "BC1",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "target_type": "instance",
            "vpc_id": "vpc-097c8472881ef7f80"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginxs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:968918779796:targetgroup/nginx-tg/5f838e0a225bdd1b-20220901051819959300000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:968918779796:targetgroup/nginx-tg/5f838e0a225bdd1b",
            "target_id": "i-0248d7860901505ad"
          },
          "dependencies": [
            "aws_instance.nginxs",
            "aws_lb_target_group.nginx-tg",
            "aws_security_group.nginx-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.s3_bucket.aws_iam_instance_profile.nginx_ec2_profile",
            "module.s3_bucket.aws_iam_role.nginx_s3_role",
            "module.s3_bucket.aws_iam_role_policy.allow_s3_all",
            "module.s3_bucket.aws_s3_bucket.web_bucket",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:968918779796:targetgroup/nginx-tg/5f838e0a225bdd1b-20220901051820199200000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:968918779796:targetgroup/nginx-tg/5f838e0a225bdd1b",
            "target_id": "i-0a7e62da4c600c2cb"
          },
          "dependencies": [
            "aws_instance.nginxs",
            "aws_lb_target_group.nginx-tg",
            "aws_security_group.nginx-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.s3_bucket.aws_iam_instance_profile.nginx_ec2_profile",
            "module.s3_bucket.aws_iam_role.nginx_s3_role",
            "module.s3_bucket.aws_iam_role_policy.allow_s3_all",
            "module.s3_bucket.aws_s3_bucket.web_bucket",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:968918779796:security-group/sg-0f78ca190bd426c34",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f78ca190bd426c34",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_alb_sg",
            "name_prefix": "",
            "owner_id": "968918779796",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "BC1",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "billing_code": "BC1",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-097c8472881ef7f80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:968918779796:security-group/sg-0a58afae755f36bde",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a58afae755f36bde",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg",
            "name_prefix": "",
            "owner_id": "968918779796",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "BC1",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "billing_code": "BC1",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-097c8472881ef7f80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:968918779796:internet-gateway/igw-061a47db2a64be28a",
            "id": "igw-061a47db2a64be28a",
            "owner_id": "968918779796",
            "tags": {
              "Name": "globoweb-dev-vpc",
              "billing_code": "BC1",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "Name": "globoweb-dev-vpc",
              "billing_code": "BC1",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "vpc_id": "vpc-097c8472881ef7f80"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-061a47db2a64be28a",
            "id": "r-rtb-028956c60a4cdd9dd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-028956c60a4cdd9dd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:968918779796:route-table/rtb-028956c60a4cdd9dd",
            "id": "rtb-028956c60a4cdd9dd",
            "owner_id": "968918779796",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "globoweb-dev-vpc",
              "billing_code": "BC1",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "Name": "globoweb-dev-vpc",
              "billing_code": "BC1",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-097c8472881ef7f80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd4c3c24ed61ca45",
            "route_table_id": "rtb-028956c60a4cdd9dd",
            "subnet_id": "subnet-0bcf1c9e78b43f479"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029a00a9fe4541976",
            "route_table_id": "rtb-028956c60a4cdd9dd",
            "subnet_id": "subnet-0a06fc44339167034"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:968918779796:subnet/subnet-0bcf1c9e78b43f479",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bcf1c9e78b43f479",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "968918779796",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "globoweb-dev-vpc",
              "billing_code": "BC1",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "Name": "globoweb-dev-vpc",
              "billing_code": "BC1",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "vpc_id": "vpc-097c8472881ef7f80"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:968918779796:subnet/subnet-0a06fc44339167034",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a06fc44339167034",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "968918779796",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "globoweb-dev-vpc",
              "billing_code": "BC1",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "Name": "globoweb-dev-vpc",
              "billing_code": "BC1",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "vpc_id": "vpc-097c8472881ef7f80"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:968918779796:vpc/vpc-097c8472881ef7f80",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01f6580700eba5eba",
            "default_route_table_id": "rtb-025deae39edf8f6d5",
            "default_security_group_id": "sg-0784274d75ec82fe9",
            "dhcp_options_id": "dopt-08a58005a98b1fc42",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-097c8472881ef7f80",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-025deae39edf8f6d5",
            "owner_id": "968918779796",
            "tags": {
              "Name": "globoweb-dev-vpc",
              "billing_code": "BC1",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "Name": "globoweb-dev-vpc",
              "billing_code": "BC1",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            }
          }
        }
      ]
    }
  ]
}